--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
+<h1>Weather Data</h1>
+<ul>
+  <li>Location: Galway</li>
+  <li *ngFor="let y of myWeather">Forecast: {{y.main}}, {{y.description}}.</li>
+</ul>
